--- a/HelloWindow/HelloWindow/HelloWindow.vcxproj.filters
+++ b/HelloWindow/HelloWindow/HelloWindow.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Win32Frame.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="HelloWindow.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
